--- a/src/components/MovieForm.css
+++ b/src/components/MovieForm.css
@@ -1,9 +1,18 @@
+.movie-form * {
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
 .movie-form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 10px;
-    padding: 10px;
+    margin: 1rem auto;
+    padding: 1rem;
+    max-width: 600px;
+    background-color: #2400523a;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-item {
@@ -13,9 +22,38 @@
 }
 
 .form-item label {
-    text-align: left;
+    font-weight: bold;
+    color: #230052;
+    font-size: 0.9rem;
+}
+
+.form-item input, 
+.form-item textarea {
+    padding: 0.75rem;
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    width: 100%;
+    transition: border-color 0.2s, box-shadow 0.2s;
+}
+
+.form-item input:focus, 
+.form-item textarea:focus {
+    outline: none;
+    border-color: #230052;
+    box-shadow: 0 0 0 3px #24005281
+}
+
+.form-item textarea {
+    min-height: 100px;
+    resize: vertical;
 }
 
 .button {
-    max-width: 120px;
+    cursor: pointer;
+    color: white;
+    border: none;
+    width: fit-content;
+    transition: background-color 0.2s ease;
+    margin: auto;
 }
